<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AgregarEjercicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarEjercicio">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/contenedor50"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="172dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/agregar_ejercicio"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="204dp"
                    android:layout_height="51dp"
                    android:layout_marginBottom="72dp"
                    android:text="@string/btnagregar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/ejercicio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="116dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginBottom="92dp"
                    android:src="@drawable/_001"
                    app:layout_constraintBottom_toTopOf="@+id/button7"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="60dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/o2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="116dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="208dp"
                    android:src="@drawable/_4"
                    app:layout_constraintBottom_toTopOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextText7"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/pierna"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView10" />

                <EditText
                    android:id="@+id/editTextText8"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="64dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/min1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>