<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EjercicioBasico">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include3"
            layout="@layout/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/contenedor2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <Button
                    android:id="@+id/button18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#161414"
                    android:onClick="Ejercicio1"
                    android:text="@string/oo"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.891"
                    app:layout_constraintStart_toEndOf="@+id/imageView14"
                    app:layout_constraintTop_toTopOf="@+id/imageView14" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/ejercicio_basico"
                    android:textColor="#FFFDFD"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="61dp"
                    android:layout_height="57dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="84dp"
                    android:onClick="AgregarEjercicio"
                    android:text="@string/btnagregar2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="92dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#161414"
                    android:text="@string/oo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="148dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView12"
                    app:srcCompat="@drawable/_4" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="120dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/abdominales"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView12" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="40dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/min2"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/button6"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="148dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/pierna"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView14"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/min1"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                    app:layout_constraintEnd_toStartOf="@+id/button18"
                    app:layout_constraintStart_toEndOf="@+id/imageView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="148dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:srcCompat="@drawable/_5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu" />
</androidx.drawerlayout.widget.DrawerLayout>