<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegistroEjercicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroEjercicio">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/contenedor4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/registro_ejercicio"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="309dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="68dp"
                    android:text="@string/btnRegistrar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.533"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="148dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="68dp"
                    android:src="@drawable/_001"
                    app:layout_constraintBottom_toTopOf="@+id/button13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.764" />

                <EditText
                    android:id="@+id/Ejecicio"
                    android:layout_width="157dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/ejercicio_0"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView5"
                    app:layout_constraintVertical_bias="0.155" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="57dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/btnagregar2"
                    app:layout_constraintBottom_toBottomOf="@+id/Cantidad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Ejecicio"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/Cantidad"
                    android:layout_width="104dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/registro_x"
                    app:layout_constraintEnd_toStartOf="@+id/button12"
                    app:layout_constraintTop_toBottomOf="@+id/Ejecicio" />

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="157dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/sentadilla"
                    app:layout_constraintBottom_toTopOf="@+id/button14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.728"
                    app:layout_constraintStart_toEndOf="@+id/imageView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.714" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="57dp"
                    android:layout_height="48dp"
                    android:text="@string/o3"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                    app:layout_constraintEnd_toStartOf="@+id/editTextText4"
                    app:layout_constraintStart_toEndOf="@+id/imageView11" />

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="104dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/o4"
                    app:layout_constraintBottom_toBottomOf="@+id/button14"
                    app:layout_constraintEnd_toEndOf="@+id/editTextText3"
                    app:layout_constraintHorizontal_bias="0.735"
                    app:layout_constraintStart_toStartOf="@+id/editTextText3"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText3"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="57dp"
                    android:layout_height="48dp"
                    android:text="@string/btnagregar2"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextText4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/editTextText4" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="57dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/o3"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintEnd_toStartOf="@+id/Cantidad"
                    app:layout_constraintTop_toBottomOf="@+id/Ejecicio"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/editTextText5"
                    android:layout_width="157dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/walking"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView16"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="57dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="48dp"
                    android:text="@string/o3"
                    app:layout_constraintBottom_toTopOf="@+id/imageView5"
                    app:layout_constraintEnd_toStartOf="@+id/editTextText6"
                    app:layout_constraintStart_toEndOf="@+id/imageView16" />

                <EditText
                    android:id="@+id/editTextText6"
                    android:layout_width="104dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/o5"
                    app:layout_constraintBottom_toBottomOf="@+id/button16"
                    app:layout_constraintEnd_toEndOf="@+id/editTextText5"
                    app:layout_constraintHorizontal_bias="0.283"
                    app:layout_constraintStart_toStartOf="@+id/editTextText5"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText5"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/button17"
                    android:layout_width="57dp"
                    android:layout_height="48dp"
                    android:text="@string/btnagregar2"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextText6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/editTextText6" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="148dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/_6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="148dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/_7"
                    app:layout_constraintBottom_toTopOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>